methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:70: error: not enough arguments for method monte: (nbCase: Int)Unit.
Unspecified value parameter nbCase.
  monte();
       ^PatternPicture:72: error: not enough arguments for method monte: (nbCase: Int)Unit.
Unspecified value parameter nbCase.
  monte();
       ^PatternPicture:74: error: not enough arguments for method monte: (nbCase: Int)Unit.
Unspecified value parameter nbCase.
  monte();
       ^PatternPicture:76: error: not enough arguments for method monte: (nbCase: Int)Unit.
Unspecified value parameter nbCase.
  monte();
       ^